k8-project/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: default
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: frontend-svc
      port:
        number: 80
  rules:
    - host: myapp.com
      http:
        paths:
          - backend:
              service:
                name: frontend-svc
                port:
                  number: 80
            path: /
            pathType: Prefix

          - backend:
              service:
                name: api-svc
                port:
                  number: 8080
            path: /api
            pathType: Prefix
